plugins {
    id 'java'
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
}

group = 'com.newterraearth'
version = '1.1.3'

base {
    archivesName = 'Wildfire_TerraFirmaEarth-1.20.1-forge'
}

def releaseArtifactBaseName = "${base.archivesName.get()}-${project.version}"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

minecraft {
    mappings channel: 'official', version: '1.20.1'

    runs {
        configureEach {
            workingDirectory project.file("run/${it.name}")
            property 'forge.logging.console.level', 'info'
            property 'mixin.env.remapRefMap', 'true'

            mods {
                tfe {
                    source sourceSets.main
                }
            }
        }

        client {}

        server {
            arg '--nogui'
        }

        data {
            args '--mod', 'tfe', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

repositories {
    mavenCentral()
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    maven {
        url = 'https://cursemaven.com'
        content {
            includeGroup 'curse.maven'
        }
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.20.1-47.1.3'
    implementation fg.deobf('curse.maven:terrafirmacraft-302973:7730077')
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

tasks.named('test').configure {
    useJUnitPlatform()
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.output + sourceSets.main.output + configurations.testRuntimeClasspath
    doFirst {
        // Gradle 8's Windows test worker cannot load classes directly from this project's non-ASCII path.
        // Pack only compiled classes into an ASCII-path temporary jar for the worker classpath.
        // Intentionally machine-local: this project is built on the maintainer's fixed Windows workstation.
        def classpathJar = file('C:/Users/g1739/.codex-cache/tfe-test-classpath.jar')
        classpathJar.parentFile.mkdirs()
        ant.jar(destfile: classpathJar) {
            fileset(dir: sourceSets.test.output.classesDirs.singleFile)
            fileset(dir: sourceSets.main.output.classesDirs.singleFile)
        }
        classpath = files(classpathJar, sourceSets.main.output.resourcesDir, configurations.testRuntimeClasspath)
    }
}

mixin {
    add sourceSets.main, 'tfe.refmap.json'
    config 'tfe.mixins.json'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

jar {
    from('LICENSE') {
        into ''
    }
    from('NOTICE') {
        into ''
    }
    from('LICENSE-MAP.md') {
        into ''
    }
    from('DISCLAIMER.md') {
        into ''
    }
    manifest {
        attributes([
            'Specification-Title'     : 'Wildfire_TerraFirmaEarth',
            'Specification-Vendor'    : '交错次元',
            'Implementation-Title'    : project.name,
            'Implementation-Version'  : project.version,
            'Implementation-Vendor'   : '交错次元',
            'MixinConfigs'            : 'tfe.mixins.json'
        ])
    }
}

tasks.register('stageReleaseDocs', Copy) {
    dependsOn tasks.named('jar')
    inputs.property('releaseArtifactBaseName', releaseArtifactBaseName)
    into layout.buildDirectory.dir('libs')

    from('LICENSE') {
        rename { "${releaseArtifactBaseName}-LICENSE.txt" }
    }
    from('NOTICE') {
        rename { "${releaseArtifactBaseName}-NOTICE.txt" }
    }
    from('LICENSE-MAP.md') {
        rename { "${releaseArtifactBaseName}-LICENSE-MAP.md" }
    }
    from('DISCLAIMER.md') {
        rename { "${releaseArtifactBaseName}-DISCLAIMER.md" }
    }
}

tasks.named('assemble').configure {
    finalizedBy tasks.named('stageReleaseDocs')
}

def tfeRuntimeTraceTaskRequested = gradle.startParameter.taskNames.any { it == 'traceRuntimeServer' || it == 'traceTerrainCutRuntimeServer' }
def tfeRuntimeTraceMode = (project.findProperty('tfeTraceMode') ?: 'terrain_cut').toString()
def tfeRuntimeTraceSeed = (project.findProperty('tfeTraceSeed') ?: project.findProperty('tfeTerrainCutSeed') ?: '-8547423016982190715').toString()
def tfeRuntimeTraceX = (project.findProperty('tfeTraceX') ?: project.findProperty('tfeTerrainCutX') ?: '2695').toString()
def tfeRuntimeTraceY = (project.findProperty('tfeTraceY') ?: '64').toString()
def tfeRuntimeTraceZ = (project.findProperty('tfeTraceZ') ?: project.findProperty('tfeTerrainCutZ') ?: '6738').toString()
def tfeRuntimeTraceRadius = (project.findProperty('tfeTraceRadius') ?: '8').toString()
def tfeRuntimeTraceAxis = (project.findProperty('tfeTraceAxis') ?: 'x').toString()
def tfeRuntimeTraceConfigFile = project.findProperty('tfeTraceConfigFile')?.toString()
def tfeRuntimeTraceResetWorld = (project.findProperty('tfeTraceResetWorld') ?: 'true').toString().toBoolean()

minecraft {
    runs {
        configureEach {
            final def traceEnabled = project.findProperty('tfeTraceEnabled') ?: project.findProperty('tfeTerrainCutTrace') ?: (tfeRuntimeTraceTaskRequested ? 'true' : null)
            if (traceEnabled != null) {
                property 'tfe.debug.runtimeTrace', traceEnabled.toString()
                property 'tfe.debug.traceMode', tfeRuntimeTraceMode
            }

            property 'tfe.debug.traceSeed', tfeRuntimeTraceSeed
            property 'tfe.debug.traceX', tfeRuntimeTraceX
            property 'tfe.debug.traceY', tfeRuntimeTraceY
            property 'tfe.debug.traceZ', tfeRuntimeTraceZ
            property 'tfe.debug.traceRadius', tfeRuntimeTraceRadius
            property 'tfe.debug.traceAxis', tfeRuntimeTraceAxis
        }
    }
}

tasks.register('prepareRuntimeTraceServer') {
    group = 'verification'
    description = 'Prepare a dedicated server working directory for coordinate-based runtime tracing.'

    doLast {
        final def seed = tfeRuntimeTraceSeed
        final def traceX = tfeRuntimeTraceX
        final def traceZ = tfeRuntimeTraceZ
        final def traceMode = tfeRuntimeTraceMode
        final def levelName = "tfe_${traceMode}_trace_s${seed}_x${traceX}_z${traceZ}".replace('-', 'm').replaceAll('[^A-Za-z0-9_]', '_')
        final def runDir = file('run/server')
        final def levelDir = new File(runDir, levelName)
        final def modsDir = new File(runDir, 'mods')
        final def configDir = new File(runDir, 'config')
        final def deobfPatchouliRoot = new File(gradle.gradleUserHomeDir, 'caches/forge_gradle/deobf_dependencies')
        final def localMinecraftRoot = new File(System.properties['user.home'], 'Desktop/PCL/.minecraft')
        final def traceConfigFile = tfeRuntimeTraceConfigFile
            ? file(tfeRuntimeTraceConfigFile)
            : new File(localMinecraftRoot, 'versions/TerraFirmaFarHorizons/config/tfe-common.toml')
        final def patchouliCandidates = []

        if (localMinecraftRoot.exists()) {
            patchouliCandidates.addAll(fileTree(localMinecraftRoot) { include '**/Patchouli-1.20.1-*-FORGE.jar' }.files)
        }
        if (deobfPatchouliRoot.exists()) {
            patchouliCandidates.addAll(fileTree(deobfPatchouliRoot) {
                include '**/patchouli-306770-*_mapped_official_1.20.1.jar'
                include '**/Patchouli-1.20.1-*-FORGE_mapped_official_1.20.1.jar'
            }.files)
        }

        final def resolvedPatchouliCandidates = patchouliCandidates
            .findAll { it.exists() }
            .sort { a, b -> a.name <=> b.name }
        final def patchouliJar = resolvedPatchouliCandidates ? resolvedPatchouliCandidates.last() : null

        runDir.mkdirs()
        modsDir.mkdirs()
        configDir.mkdirs()
        if (tfeRuntimeTraceResetWorld && levelDir.exists()) {
            delete(levelDir)
        }
        if (patchouliJar == null) {
            throw new GradleException("Patchouli runtime jar not found under ${localMinecraftRoot} or ${deobfPatchouliRoot}")
        }

        delete(fileTree(modsDir) {
            include '*Patchouli*.jar'
            include '*patchouli*.jar'
        })

        copy {
            from patchouliJar
            into modsDir
        }

        if (traceConfigFile.exists()) {
            copy {
                from traceConfigFile
                into configDir
            }
            println "Using TFE trace config: ${traceConfigFile}"
        }

        new File(runDir, 'eula.txt').text = "eula=true${System.lineSeparator()}"
        new File(runDir, 'server.properties').text = """allow-flight=true
broadcast-rcon-to-ops=false
difficulty=normal
enable-command-block=false
enable-query=false
enable-rcon=false
enforce-whitelist=false
force-gamemode=false
function-permission-level=2
gamemode=survival
generate-structures=true
hardcore=false
level-name=${levelName}
level-seed=${seed}
level-type=tfc:overworld
max-players=1
max-tick-time=-1
motd=TFE Runtime Trace
online-mode=false
op-permission-level=4
player-idle-timeout=0
pvp=false
rate-limit=0
simulation-distance=4
spawn-animals=false
spawn-monsters=false
spawn-npcs=false
spawn-protection=0
sync-chunk-writes=true
view-distance=4
white-list=false
""".stripIndent()
    }
}

tasks.register('traceRuntimeServer') {
    group = 'verification'
    description = 'Launch a dedicated TFC server and dump coordinate-based runtime trace logs.'
    dependsOn 'prepareRuntimeTraceServer', 'runServer'
}

tasks.configureEach {
    if (name == 'runServer') {
        mustRunAfter tasks.named('prepareRuntimeTraceServer')
    }
}

tasks.register('traceTerrainCutRuntimeServer') {
    group = 'verification'
    description = 'Alias for traceRuntimeServer with tfeTraceMode=terrain_cut.'
    dependsOn 'traceRuntimeServer'
}
